@@ -10,6 +10,7 @@ Version 1.28  2010-05-08
  * client add libfastcommon
  * global variables: g_base_path, g_network_timeout, g_version change to 
    g_fdfs_base_path, g_fdfs_network_timeout, g_fdfs_version
+ * common/fdfs_base64.h/c change name to common/base64.h/c
 
 Version 1.27  2010-04-10
  * storage.conf: add if_alias_prefix parameter to get the ip address of the 
